# HAL-Recovery-Compiler

./: .gitignore  CITATION.cff  README.md  RELEASE_NOTES_v0.3.1-public-poc.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLAIMS.md  DEMO.md  DEMO_TRANSCRIPT.md  FUNCTIONAL_YIELD.md  GITHUB_REPO_SETUP.md  OUTPUTS.md  PORTFOLIO_BRIEF.md  ROADMAP.md  SAFETY_BOUNDARY.md  VERSION_HISTORY.md
samples/: chip_001.json  constraints.json  workloads.json
scripts/: generate_samples.py  package_release.py
src/hal_rc/: __init__.py  baseline.py  cli.py  comparison.py  graph.py  ingest.py  invariants.py  models.py  passport.py  profile.py  recommendation.py  replay.py  report.py  solver_greedy.py  solver_local_search.py  solver_route_aware.py
tests/: conftest.py  test_cli.py  test_comparison.py  test_graph.py  test_ingest.py  test_invariants.py  test_packaging.py  test_passport.py  test_profile.py  test_public_docs.py  test_route_aware.py  test_solver_greedy.py
